Bug 1832370 - Don't set WS_EX_TRANSPARENT from SetInputRegion. r=handyman

Tentative patch, as I don't have win7 to test.

We handle input region in WM_NCHITTEST, I don't see why we need to
change the window style...

Differential Revision: https://phabricator.services.mozilla.com/D178097